k8s/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dialogflow-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dialogflow-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: dialogflow-ui
    spec:
      containers:
      - name: dialogflow-ui
        imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
