k8s/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dialogflow-ui-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    certmanager.k8s.io/cluster-issuer: do-issuer
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: digitalocean
